# pydantic-gotcha-cannot-serialize-fieldinfo

./: README.md  pyproject.toml
pydantic_horror_show/: __init__.py
